--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           command: npm run registerflow
-      - name: Cypress run
+      - name: Cypress Test Report
         uses: actions/upload-artifact@v4
         with:
           name: Mochaawesome HTML Report
