--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           command: npm run registerflow
       - name: Cypress Test Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: Mochaawesome HTML Report
