--- a/.github/workflows/manual_workflow.yml
+++ b/.github/workflows/manual_workflow.yml
@@ -8,6 +8,9 @@ on:
         default: "Preprod"
         required: true
         type: string
+        options:
+          - "preprod"
+          - "orange"
 
 jobs:
   print-environment:
@@ -15,4 +18,4 @@ jobs:
 
     steps:
       - name: trigger the preprod environment
-        run: echo The username is ${{ inputs.username }}
+        run: echo The username is ${{ inputs.environment }}
